crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_style_to_attrs__convert_style_to_attrs-5.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_style_to_attrs.rs
expression: "test_config(r#\"{ \"convertStyleToAttrs\": { \"keepImportant\": true } }\"#,\nSome(r#\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <!-- cannot move important styles -->\n    <rect width=\"100\" height=\"100\" class=\"blue red\" style=\"fill:red!important\"/>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <!-- cannot move important styles -->
    <rect width="100" height="100" class="blue red" style="fill:red!important"/>
</svg>
